--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
-{
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2"
-  }
+"dependencies": {
+  "cors": "^2.8.5",
+  "dotenv": "^16.4.5",
+  "express": "^4.18.2",
+  "openai": "^4.0.0",
+  "firebase-admin": "^12.0.0",
+  "node-fetch": "^3.3.2",
+  "jsdom": "^24.0.0"
 }
